################################################################################
#                               Project Manifest                               #
#                                                                              #
# This file describes the Rust project to the Cargo build tool for operations. #
################################################################################

[package]
name = "wyz"
version = "0.1.1"
authors = [
	"myrrlyn <self@myrrlyn.dev>",
]
edition = "2018"
categories = [
	"no-std",
]
description = "myrrlyn’s utility collection"
documentation = "https://docs.rs/wyz"
homepage = "https://myrrlyn.net/crates/wyz"
keywords = [
]
license = "MIT"
readme = "README.md"
repository = "https://github.com/myrrlyn/wyz"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[features]
alloc = []
std = ["alloc"]
