################################################################################
#                               Project Manifest                               #
#                                                                              #
# This file describes the Rust project to the Cargo build tool for operations. #
################################################################################

[package]
name = "wyz"
version = "0.6.0"
authors = [
	"myrrlyn <self@myrrlyn.dev>",
]
edition = "2018"
categories = [
	"no-std",
]
description = "myrrlyn’s utility collection"
documentation = "https://docs.rs/wyz"
homepage = "https://myrrlyn.net/crates/wyz"
include = [
	"Cargo.toml",
	"LICENSE.txt",
	"README.md",
	"src/**/*.rs",
]
keywords = [
]
license = "MIT"
readme = "README.md"
repository = "https://github.com/myrrlyn/wyz"
rust-version = "1.40"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.once_cell]
version = "1"
optional = true

[dependencies.tap]
version = "1"


[features]
alloc = []
default = ["std"]
std = ["alloc"]
